src/test/ui/span/issue-34264.stderr
error: expected one of `:` or `@`, found `<`
  --> $DIR/issue-34264.rs:1:14
   |
LL | fn foo(Option<i32>, String) {}
   |              ^ expected one of `:` or `@` here

error: expected one of `:` or `@`, found `)`
  --> $DIR/issue-34264.rs:1:27
   |
LL | fn foo(Option<i32>, String) {}
   |                           ^ expected one of `:` or `@` here
   |
   = note: anonymous parameters are removed in the 2018 edition (see RFC 1685)
help: if this was a parameter name, give it a type
   |
LL | fn foo(Option<i32>, String: TypeName) {}
   |                     ^^^^^^^^^^^^^^^^
help: if this is a type, explicitly ignore the parameter name
   |
LL | fn foo(Option<i32>, _: String) {}
   |                     ^^^^^^^^^

error: expected one of `:` or `@`, found `,`
  --> $DIR/issue-34264.rs:3:9
   |
LL | fn bar(x, y: usize) {}
   |         ^ expected one of `:` or `@` here
   |
   = note: anonymous parameters are removed in the 2018 edition (see RFC 1685)
help: if this was a parameter name, give it a type
   |
LL | fn bar(x: TypeName, y: usize) {}
   |        ^^^^^^^^^^^
help: if this is a type, explicitly ignore the parameter name
   |
LL | fn bar(_: x, y: usize) {}
   |        ^^^^

error[E0061]: this function takes 2 parameters but 3 parameters were supplied
  --> $DIR/issue-34264.rs:7:5
   |
LL | fn foo(Option<i32>, String) {}
   | --------------------------- defined here
...
LL |     foo(Some(42), 2, "");
   |     ^^^^^^^^^^^^^^^^^^^^ expected 2 parameters

error[E0308]: mismatched types
  --> $DIR/issue-34264.rs:8:13
   |
LL |     bar("", "");
   |             ^^ expected usize, found reference
   |
   = note: expected type `usize`
              found type `&'static str`

error[E0061]: this function takes 2 parameters but 3 parameters were supplied
  --> $DIR/issue-34264.rs:10:5
   |
LL | fn bar(x, y: usize) {}
   | ------------------- defined here
...
LL |     bar(1, 2, 3);
   |     ^^^^^^^^^^^^ expected 2 parameters

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0061, E0308.
For more information about an error, try `rustc --explain E0061`.
